# khelp

./: .goreleaser.yaml  CHANGELOG.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: ci.yml  publish.yml  release.yml
src/: cli.rs  main.rs  test_utils.rs
src/commands/: add.rs  cleanup.rs  completions.rs  current.rs  delete.rs  edit.rs  export.rs  list.rs  mod.rs  rename.rs  switch.rs  update.rs
src/config/: kubernetes.rs  mod.rs  operations.rs
src/utils/: mod.rs  update.rs
tests/: add_delete_tests.rs  integration_tests.rs  list_current_tests.rs  rename_tests.rs  switch_export_tests.rs
tests/common/: mod.rs
