[package]
name = "khelp"
version = "0.1.0"
edition = "2024"
description = "A tool for managing kubernetes contexts"
license = "MIT"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
anyhow = "1.0.97"
dirs = "6.0"
console = "0.15"
dialoguer = "0.11"
tempfile = "3.19"

[profile.release]
lto = true
strip = true
codegen-units = 3

[profile.dev]
codegen-units = 1

[profile.test]
codegen-units = 1
