[package]
name = "khelp"
version = "0.1.3"
edition = "2024"
description = "A tool for managing kubernetes contexts"
repository = "https://github.com/stvnksslr/khelp"
license = "MIT"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
clap_complete = "4.5.47"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
anyhow = "1.0.97"
dirs = "6.0"
console = "0.15"
dialoguer = "0.11"
tempfile = "3.19"
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "rustls",
], default-features = false, optional = true }
log = "0.4.22"
env_logger = "0.11.6"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.19"


[profile.release]
lto = true
strip = true
codegen-units = 3

[profile.dev]
codegen-units = 1

[profile.test]
codegen-units = 1
